WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158591
Rare failure in stress/v8-deltablue-strict.js.ftl-eager
https://bugs.webkit.org/show_bug.cgi?id=158591
Summary
Rare failure in stress/v8-deltablue-strict.js.ftl-eager
Filip Pizlo
Reported
2016-06-09 16:01:49 PDT
Patch forthcoming.
Attachments
the patch
(12.20 KB, patch)
2016-06-09 16:20 PDT
,
Filip Pizlo
saam
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Filip Pizlo
Comment 1
2016-06-09 16:20:50 PDT
Created
attachment 280964
[details]
the patch
Saam Barati
Comment 2
2016-06-09 16:33:55 PDT
Comment on
attachment 280964
[details]
the patch View in context:
https://bugs.webkit.org/attachment.cgi?id=280964&action=review
> Source/JavaScriptCore/dfg/DFGNode.h:546 > + void convertToPutByOffset(StorageAccessData& data, Edge storage, Edge childEdge)
I'd call this base
Filip Pizlo
Comment 3
2016-06-09 18:56:47 PDT
(In reply to
comment #2
)
> Comment on
attachment 280964
[details]
> the patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=280964&action=review
> > > Source/JavaScriptCore/dfg/DFGNode.h:546 > > + void convertToPutByOffset(StorageAccessData& data, Edge storage, Edge childEdge) > > I'd call this base
Fixed!
Filip Pizlo
Comment 4
2016-06-09 19:02:22 PDT
Landed in
http://trac.webkit.org/changeset/201900
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug